merge: combine local and remote history

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,16 +13,16 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".", 
+    "paths": {
+      "@/*": ["./*"]
+    },
     "plugins": [
       {
         "name": "next"
       }
-    ],
-    "paths": {
-      "@/*": ["./*"]
-    }
+    ]
   },
-<<<<<<< HEAD
   "include": [
     "next-env.d.ts",
     "**/*.ts",
@@ -30,8 +30,5 @@
     ".next/types/**/*.ts",
     "lib/db/dbConfig.jsx"
   ],
-=======
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
->>>>>>> 6c4e7886620c039c0a0d79987b939e6aef92bf4a
   "exclude": ["node_modules"]
 }
